<resources>
    <string name="app_name">MainProject</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_and_text_tabs">Icon and Text tabs</string>
    <string name="my_networks">My Networks</string>
    <string name="wifi_on_map">Wifi On Map</string>
    <string name="data_usage">Data Usage</string>
    <string name="add_hidden_network">Add Hidden Network</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="header_text">"Name "</string>
    <string name="octoconnect">OctoConnect</string>
    <string name="casa_blanka">Casa Blanka</string>
    <string name="la">la la la la la la la la la la la la la la la la la la la la la</string>
    <string name="e_17_eu">17 EU</string>
    <string name="shoe_price">172.5 AED</string>
    <string name="item_text">something</string>
    <string name="Camera_title">Camera</string>
    <string name="Contacts_title">Contacts</string>
    <string name="Location_title">Location</string>
    <string name="Storage_title">Storage</string>
</resources>