<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav_bt"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/search_nav_bt"
        android:title="@string/search"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/cart_nav_bt"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/profile_nav_bt"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/more_nav_bt"
        android:title="@string/more"
        android:icon="@drawable/ic_more"/>
</menu>